# sim3opt

./: .gitignore  ATANCamera.cc  ATANCamera.h  CMakeLists.txt  README.md  SmallMatrixOpts.h  TemplatedLoopDetectorPatch.txt  bal_example.cpp  bal_example.h  build.sh  drawPTAMPoints.cpp  drawPTAMPoints.h  kittiDetector.h  kitti_surf.cpp  sim3_rv.h
data/map000000/: EGs.txt  cc.txt  framePoses.txt  loopConstraints.txt  loopPairs.txt  loopTracks.txt  rots.txt
g2o_types/: anchored_points.cpp
